commented out downvote calculation because of divide by zero error

--- a/RedditData.ipynb
+++ b/RedditData.ipynb
@@ -84,13 +84,13 @@
     "    }\n",
     "    \n",
     "    content[\"total_awards\"] = extract_num_rewards(content[\"awards\"])\n",
-    "    content[\"downs\"] = (1 - content[\"upvote_ratio\"]) * content[\"ups\"] / content[\"upvote_ratio\"]\n",
+    "    #content[\"downs\"] = (1 - content[\"upvote_ratio\"]) * content[\"ups\"] / content[\"upvote_ratio\"]\n",
     "    return content"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 352,
    "metadata": {
     "scrolled": true
    },
@@ -2242,7 +2242,164 @@
       "Target time: 1611792000, current end point 1611802448, remaining 10448\n",
       "Target time: 1611792000, current end point 1611802370, remaining 10370\n",
       "Target time: 1611792000, current end point 1611802306, remaining 10306\n",
-      "Target time: 1611792000, current end point 1611802223, remaining 10223\n"
+      "Target time: 1611792000, current end point 1611802223, remaining 10223\n",
+      "Target time: 1611792000, current end point 1611802137, remaining 10137\n",
+      "Target time: 1611792000, current end point 1611802067, remaining 10067\n",
+      "Target time: 1611792000, current end point 1611801983, remaining 9983\n",
+      "Target time: 1611792000, current end point 1611801908, remaining 9908\n",
+      "Target time: 1611792000, current end point 1611801833, remaining 9833\n",
+      "Target time: 1611792000, current end point 1611801755, remaining 9755\n",
+      "Target time: 1611792000, current end point 1611801687, remaining 9687\n",
+      "Target time: 1611792000, current end point 1611801615, remaining 9615\n",
+      "Target time: 1611792000, current end point 1611801545, remaining 9545\n",
+      "Target time: 1611792000, current end point 1611801481, remaining 9481\n",
+      "Target time: 1611792000, current end point 1611801414, remaining 9414\n",
+      "Target time: 1611792000, current end point 1611801349, remaining 9349\n",
+      "Target time: 1611792000, current end point 1611801255, remaining 9255\n",
+      "Target time: 1611792000, current end point 1611801177, remaining 9177\n",
+      "Target time: 1611792000, current end point 1611801115, remaining 9115\n",
+      "Target time: 1611792000, current end point 1611801042, remaining 9042\n",
+      "Target time: 1611792000, current end point 1611800969, remaining 8969\n",
+      "Target time: 1611792000, current end point 1611800905, remaining 8905\n",
+      "Target time: 1611792000, current end point 1611800828, remaining 8828\n",
+      "Target time: 1611792000, current end point 1611800759, remaining 8759\n",
+      "Target time: 1611792000, current end point 1611800683, remaining 8683\n",
+      "Target time: 1611792000, current end point 1611800613, remaining 8613\n",
+      "Target time: 1611792000, current end point 1611800531, remaining 8531\n",
+      "Target time: 1611792000, current end point 1611800460, remaining 8460\n",
+      "Target time: 1611792000, current end point 1611800403, remaining 8403\n",
+      "Target time: 1611792000, current end point 1611800333, remaining 8333\n",
+      "Target time: 1611792000, current end point 1611800250, remaining 8250\n",
+      "Target time: 1611792000, current end point 1611800171, remaining 8171\n",
+      "Target time: 1611792000, current end point 1611800105, remaining 8105\n",
+      "Target time: 1611792000, current end point 1611800036, remaining 8036\n",
+      "Target time: 1611792000, current end point 1611799971, remaining 7971\n",
+      "Target time: 1611792000, current end point 1611799898, remaining 7898\n",
+      "Target time: 1611792000, current end point 1611799822, remaining 7822\n",
+      "Target time: 1611792000, current end point 1611799753, remaining 7753\n",
+      "Target time: 1611792000, current end point 1611799686, remaining 7686\n",
+      "Target time: 1611792000, current end point 1611799627, remaining 7627\n",
+      "Target time: 1611792000, current end point 1611799553, remaining 7553\n",
+      "Target time: 1611792000, current end point 1611799472, remaining 7472\n",
+      "Target time: 1611792000, current end point 1611799403, remaining 7403\n",
+      "Target time: 1611792000, current end point 1611799334, remaining 7334\n",
+      "Target time: 1611792000, current end point 1611799278, remaining 7278\n",
+      "Target time: 1611792000, current end point 1611799215, remaining 7215\n",
+      "Target time: 1611792000, current end point 1611799161, remaining 7161\n",
+      "Target time: 1611792000, current end point 1611799097, remaining 7097\n",
+      "Target time: 1611792000, current end point 1611799027, remaining 7027\n",
+      "Target time: 1611792000, current end point 1611798957, remaining 6957\n",
+      "Target time: 1611792000, current end point 1611798883, remaining 6883\n",
+      "Target time: 1611792000, current end point 1611798821, remaining 6821\n",
+      "Target time: 1611792000, current end point 1611798748, remaining 6748\n",
+      "Target time: 1611792000, current end point 1611798678, remaining 6678\n",
+      "Target time: 1611792000, current end point 1611798614, remaining 6614\n",
+      "Target time: 1611792000, current end point 1611798544, remaining 6544\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Target time: 1611792000, current end point 1611798481, remaining 6481\n",
+      "Target time: 1611792000, current end point 1611798411, remaining 6411\n",
+      "Target time: 1611792000, current end point 1611798339, remaining 6339\n",
+      "Target time: 1611792000, current end point 1611798277, remaining 6277\n",
+      "Target time: 1611792000, current end point 1611798209, remaining 6209\n",
+      "Target time: 1611792000, current end point 1611798155, remaining 6155\n",
+      "Target time: 1611792000, current end point 1611798096, remaining 6096\n",
+      "Target time: 1611792000, current end point 1611798020, remaining 6020\n",
+      "Target time: 1611792000, current end point 1611797959, remaining 5959\n",
+      "Target time: 1611792000, current end point 1611797897, remaining 5897\n",
+      "Target time: 1611792000, current end point 1611797841, remaining 5841\n",
+      "Target time: 1611792000, current end point 1611797778, remaining 5778\n",
+      "Target time: 1611792000, current end point 1611797711, remaining 5711\n",
+      "Target time: 1611792000, current end point 1611797653, remaining 5653\n",
+      "Target time: 1611792000, current end point 1611797600, remaining 5600\n",
+      "Target time: 1611792000, current end point 1611797543, remaining 5543\n",
+      "Target time: 1611792000, current end point 1611797476, remaining 5476\n",
+      "Target time: 1611792000, current end point 1611797424, remaining 5424\n",
+      "Target time: 1611792000, current end point 1611797362, remaining 5362\n",
+      "Target time: 1611792000, current end point 1611797296, remaining 5296\n",
+      "Target time: 1611792000, current end point 1611797237, remaining 5237\n",
+      "Target time: 1611792000, current end point 1611797180, remaining 5180\n",
+      "Target time: 1611792000, current end point 1611797123, remaining 5123\n",
+      "Target time: 1611792000, current end point 1611797069, remaining 5069\n",
+      "Target time: 1611792000, current end point 1611797014, remaining 5014\n",
+      "Target time: 1611792000, current end point 1611796946, remaining 4946\n",
+      "Target time: 1611792000, current end point 1611796889, remaining 4889\n",
+      "Target time: 1611792000, current end point 1611796831, remaining 4831\n",
+      "Target time: 1611792000, current end point 1611796770, remaining 4770\n",
+      "Target time: 1611792000, current end point 1611796719, remaining 4719\n",
+      "Target time: 1611792000, current end point 1611796669, remaining 4669\n",
+      "Target time: 1611792000, current end point 1611796620, remaining 4620\n",
+      "Target time: 1611792000, current end point 1611796578, remaining 4578\n",
+      "Target time: 1611792000, current end point 1611796530, remaining 4530\n",
+      "Target time: 1611792000, current end point 1611796483, remaining 4483\n",
+      "Target time: 1611792000, current end point 1611796443, remaining 4443\n",
+      "Target time: 1611792000, current end point 1611796397, remaining 4397\n",
+      "Target time: 1611792000, current end point 1611796348, remaining 4348\n",
+      "Target time: 1611792000, current end point 1611796304, remaining 4304\n",
+      "Target time: 1611792000, current end point 1611796260, remaining 4260\n",
+      "Target time: 1611792000, current end point 1611796215, remaining 4215\n",
+      "Target time: 1611792000, current end point 1611796170, remaining 4170\n",
+      "Target time: 1611792000, current end point 1611796126, remaining 4126\n",
+      "Target time: 1611792000, current end point 1611796081, remaining 4081\n",
+      "Target time: 1611792000, current end point 1611796037, remaining 4037\n",
+      "Target time: 1611792000, current end point 1611795992, remaining 3992\n",
+      "Target time: 1611792000, current end point 1611795950, remaining 3950\n",
+      "Target time: 1611792000, current end point 1611795905, remaining 3905\n",
+      "Target time: 1611792000, current end point 1611795860, remaining 3860\n",
+      "Target time: 1611792000, current end point 1611795818, remaining 3818\n",
+      "Target time: 1611792000, current end point 1611795778, remaining 3778\n",
+      "Target time: 1611792000, current end point 1611795737, remaining 3737\n",
+      "Target time: 1611792000, current end point 1611795697, remaining 3697\n",
+      "Target time: 1611792000, current end point 1611795648, remaining 3648\n",
+      "Target time: 1611792000, current end point 1611795609, remaining 3609\n",
+      "Target time: 1611792000, current end point 1611795571, remaining 3571\n",
+      "Target time: 1611792000, current end point 1611795528, remaining 3528\n",
+      "Target time: 1611792000, current end point 1611795494, remaining 3494\n",
+      "Target time: 1611792000, current end point 1611795456, remaining 3456\n",
+      "Target time: 1611792000, current end point 1611795421, remaining 3421\n",
+      "Target time: 1611792000, current end point 1611795390, remaining 3390\n",
+      "Target time: 1611792000, current end point 1611795350, remaining 3350\n",
+      "Target time: 1611792000, current end point 1611795317, remaining 3317\n",
+      "Target time: 1611792000, current end point 1611795284, remaining 3284\n",
+      "Target time: 1611792000, current end point 1611795250, remaining 3250\n",
+      "Target time: 1611792000, current end point 1611795215, remaining 3215\n",
+      "Target time: 1611792000, current end point 1611795180, remaining 3180\n",
+      "Target time: 1611792000, current end point 1611795141, remaining 3141\n",
+      "Target time: 1611792000, current end point 1611795105, remaining 3105\n",
+      "Target time: 1611792000, current end point 1611795070, remaining 3070\n",
+      "Target time: 1611792000, current end point 1611795035, remaining 3035\n",
+      "Target time: 1611792000, current end point 1611795001, remaining 3001\n",
+      "Target time: 1611792000, current end point 1611794970, remaining 2970\n",
+      "Target time: 1611792000, current end point 1611794935, remaining 2935\n",
+      "Target time: 1611792000, current end point 1611794899, remaining 2899\n",
+      "Target time: 1611792000, current end point 1611794870, remaining 2870\n",
+      "Target time: 1611792000, current end point 1611794829, remaining 2829\n",
+      "Target time: 1611792000, current end point 1611794795, remaining 2795\n",
+      "Target time: 1611792000, current end point 1611794757, remaining 2757\n",
+      "Target time: 1611792000, current end point 1611794718, remaining 2718\n",
+      "Target time: 1611792000, current end point 1611794671, remaining 2671\n",
+      "Target time: 1611792000, current end point 1611794623, remaining 2623\n",
+      "Target time: 1611792000, current end point 1611794535, remaining 2535\n",
+      "Target time: 1611792000, current end point 1611792393, remaining 393\n",
+      "pushshift found 164342 submissions.\n",
+      "Getting the updated values.\n"
+     ]
+    },
+    {
+     "ename": "ZeroDivisionError",
+     "evalue": "float division by zero",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mZeroDivisionError\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-352-f2b751d4557d>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     64\u001b[0m     \u001b[0mstart_time\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mconvert_to_utc\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mwindow_left\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     65\u001b[0m     \u001b[0mend_time\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mconvert_to_utc\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mwindow_right\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 66\u001b[1;33m     \u001b[0mdf\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mget_all_submissions\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mstart_time\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mend_time\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m\"wallstreetbets\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     67\u001b[0m     \u001b[0mdf\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mto_pickle\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34mf\"Data/wsb_start{convert_to_utc(window_left)}.pkl\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     68\u001b[0m     \u001b[0msubreddit_df\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0msubreddit_df\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdf\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mignore_index\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;32mTrue\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m<ipython-input-352-f2b751d4557d>\u001b[0m in \u001b[0;36mget_all_submissions\u001b[1;34m(start_time, end_time, subreddit)\u001b[0m\n\u001b[0;32m     43\u001b[0m     \u001b[0mpraw_submissions\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     44\u001b[0m     \u001b[1;32mfor\u001b[0m \u001b[0msubmission\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mreddit\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0minfo\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mids2\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m \u001b[1;31m# Makes a single call to the PRAW API, much faster than doing them one by one.\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 45\u001b[1;33m         \u001b[0mpraw_submissions\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mextract_data\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0msubmission\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     46\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     47\u001b[0m     \u001b[0mpraw_df\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mDataFrame\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mpraw_submissions\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m<ipython-input-348-68f14c5a5bc8>\u001b[0m in \u001b[0;36mextract_data\u001b[1;34m(submission, comments)\u001b[0m\n\u001b[0;32m     28\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     29\u001b[0m     \u001b[0mcontent\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m\"total_awards\"\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mextract_num_rewards\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mcontent\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m\"awards\"\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 30\u001b[1;33m     \u001b[0mcontent\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m\"downs\"\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m(\u001b[0m\u001b[1;36m1\u001b[0m \u001b[1;33m-\u001b[0m \u001b[0mcontent\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m\"upvote_ratio\"\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m*\u001b[0m \u001b[0mcontent\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m\"ups\"\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m/\u001b[0m \u001b[0mcontent\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m\"upvote_ratio\"\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     31\u001b[0m     \u001b[1;32mreturn\u001b[0m \u001b[0mcontent\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mZeroDivisionError\u001b[0m: float division by zero"
      ]
     }
    ],
@@ -2487,18 +2644,6 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.7.6"
   }
  },
  "nbformat": 4,
