fixed the scraper

--- a/Sandbox/ExploratoryDataAnalysis.ipynb
+++ b/Sandbox/ExploratoryDataAnalysis.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -59,69 +59,69 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Glorious Oracle of Ohama achieves pareto effic...</td>\n",
-       "      <td>n6lg1w</td>\n",
-       "      <td>1620345568</td>\n",
-       "      <td>t2_3qdkzqjm</td>\n",
-       "      <td>False</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0.99</td>\n",
-       "      <td>0</td>\n",
-       "      <td></td>\n",
-       "      <td>https://i.redd.it/mspkkklr9lx61.png</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>FLGT TO THE MOON...1ST QTR #S TODAY</td>\n",
-       "      <td>n6lfdp</td>\n",
-       "      <td>1620345502</td>\n",
-       "      <td>t2_a0mf559i</td>\n",
+       "      <th>6003</th>\n",
+       "      <td>$MSFT Infinite Money Glitch 🚀🚀🚀</td>\n",
+       "      <td>n4dvka</td>\n",
+       "      <td>1620095108</td>\n",
+       "      <td>t2_4srimr8j</td>\n",
        "      <td>True</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1.00</td>\n",
-       "      <td>0</td>\n",
-       "      <td>FLGT TO THE MOON...1ST QTR #S TODAY</td>\n",
+       "      <td>19066</td>\n",
+       "      <td>0.89</td>\n",
+       "      <td>195</td>\n",
+       "      <td>Disclaimer: I am not a financial or investment...</td>\n",
        "      <td>https://www.reddit.com/r/wallstreetbets/commen...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>OCGN Watch for Tomorrow...</td>\n",
-       "      <td>n6lfa5</td>\n",
-       "      <td>1620345492</td>\n",
-       "      <td>t2_a368t9uc</td>\n",
+       "      <th>1854</th>\n",
+       "      <td>WSB mods sleeping... AMC &amp;amp; GME to the mooo...</td>\n",
+       "      <td>n62fi3</td>\n",
+       "      <td>1620289149</td>\n",
+       "      <td>t2_a0qxqff0</td>\n",
        "      <td>True</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1.00</td>\n",
-       "      <td>0</td>\n",
+       "      <td>6169</td>\n",
+       "      <td>0.93</td>\n",
+       "      <td>45</td>\n",
+       "      <td>AMC and GME let's go.</td>\n",
+       "      <td>https://www.reddit.com/r/wallstreetbets/commen...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2173</th>\n",
+       "      <td>BRING GME BACK!</td>\n",
+       "      <td>n5z4si</td>\n",
+       "      <td>1620275340</td>\n",
+       "      <td>t2_4b5sdbo4</td>\n",
+       "      <td>True</td>\n",
+       "      <td>5817</td>\n",
+       "      <td>0.91</td>\n",
+       "      <td>76</td>\n",
+       "      <td>Enough with the new pump and dump every week, ...</td>\n",
+       "      <td>https://www.reddit.com/r/wallstreetbets/commen...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8316</th>\n",
+       "      <td>Why I think the market will see a 30-50% corre...</td>\n",
+       "      <td>n30u1l</td>\n",
+       "      <td>1619937822</td>\n",
+       "      <td>t2_120825</td>\n",
+       "      <td>True</td>\n",
+       "      <td>4944</td>\n",
+       "      <td>0.88</td>\n",
+       "      <td>70</td>\n",
        "      <td>[removed]</td>\n",
        "      <td>https://www.reddit.com/r/wallstreetbets/commen...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>i think this fits here</td>\n",
-       "      <td>n6lefj</td>\n",
-       "      <td>1620345410</td>\n",
-       "      <td>t2_4ac5c7gb</td>\n",
-       "      <td>False</td>\n",
-       "      <td>3</td>\n",
-       "      <td>0.72</td>\n",
-       "      <td>1</td>\n",
-       "      <td></td>\n",
-       "      <td>https://www.youtube.com/watch?v=6aZ0JYy2IIc</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Sad 😔</td>\n",
-       "      <td>n6lecl</td>\n",
-       "      <td>1620345402</td>\n",
-       "      <td>t2_5qd02awb</td>\n",
-       "      <td>False</td>\n",
-       "      <td>36</td>\n",
-       "      <td>0.86</td>\n",
-       "      <td>0</td>\n",
-       "      <td></td>\n",
-       "      <td>https://i.redd.it/ciguyky99lx61.jpg</td>\n",
+       "      <th>3268</th>\n",
+       "      <td>Mods that are only 2 days old?</td>\n",
+       "      <td>n5lvld</td>\n",
+       "      <td>1620236701</td>\n",
+       "      <td>t2_4495h5sb</td>\n",
+       "      <td>True</td>\n",
+       "      <td>4100</td>\n",
+       "      <td>0.94</td>\n",
+       "      <td>21</td>\n",
+       "      <td>Wow!  They seem to have gotten a lot of experi...</td>\n",
+       "      <td>https://www.reddit.com/r/wallstreetbets/commen...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -137,139 +137,147 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>9401</th>\n",
-       "      <td>Lollllllllll</td>\n",
-       "      <td>n26sjv</td>\n",
-       "      <td>1619827492</td>\n",
-       "      <td>t2_8jwdn4sp</td>\n",
-       "      <td>False</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1.00</td>\n",
-       "      <td>0</td>\n",
-       "      <td></td>\n",
-       "      <td>https://i.redd.it/uk59khg9hew61.jpg</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9402</th>\n",
-       "      <td>Patience is a virtue. Took awhile before Tesla...</td>\n",
-       "      <td>n26rtq</td>\n",
-       "      <td>1619827429</td>\n",
-       "      <td>t2_6ny07hwq</td>\n",
-       "      <td>False</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1.00</td>\n",
-       "      <td>0</td>\n",
-       "      <td></td>\n",
-       "      <td>https://v.redd.it/touz8edygew61</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9403</th>\n",
-       "      <td>First 500 to sign up receive 100k DaBaby</td>\n",
-       "      <td>n26r4b</td>\n",
-       "      <td>1619827368</td>\n",
-       "      <td>t2_a1z5kokh</td>\n",
-       "      <td>False</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.23</td>\n",
-       "      <td>1</td>\n",
-       "      <td></td>\n",
-       "      <td>https://docs.google.com/forms/d/e/1FAIpQLSeKQw...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9404</th>\n",
-       "      <td>If there is one thing I have learnt on r/wsb, ...</td>\n",
-       "      <td>n26qr6</td>\n",
-       "      <td>1619827339</td>\n",
-       "      <td>t2_6b8tzrby</td>\n",
+       "      <th>2082</th>\n",
+       "      <td>Buy $GOEV join us in bankruptcy or Valhalla. G...</td>\n",
+       "      <td>n5ztnt</td>\n",
+       "      <td>1620278039</td>\n",
+       "      <td>t2_a1jt7kff</td>\n",
        "      <td>True</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1.00</td>\n",
        "      <td>0</td>\n",
-       "      <td>[removed]</td>\n",
+       "      <td>0.35</td>\n",
+       "      <td>0</td>\n",
+       "      <td>This is not financial advice. It is possible t...</td>\n",
        "      <td>https://www.reddit.com/r/wallstreetbets/commen...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>9405</th>\n",
-       "      <td>When fighting Marxist censorship makes you a m...</td>\n",
-       "      <td>n26q7n</td>\n",
-       "      <td>1619827288</td>\n",
-       "      <td>t2_9zm7adcw</td>\n",
-       "      <td>False</td>\n",
-       "      <td>19</td>\n",
-       "      <td>0.83</td>\n",
+       "      <th>2084</th>\n",
+       "      <td>Robinhood says rocket is down 13% in the prema...</td>\n",
+       "      <td>n5zrnx</td>\n",
+       "      <td>1620277828</td>\n",
+       "      <td>t2_5qaiaw6y</td>\n",
+       "      <td>True</td>\n",
        "      <td>0</td>\n",
-       "      <td></td>\n",
-       "      <td>https://i.redd.it/z6bn1yjngew61.jpg</td>\n",
+       "      <td>0.15</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Is this accurate?? How does this kind of thing...</td>\n",
+       "      <td>https://www.reddit.com/r/wallstreetbets/commen...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2093</th>\n",
+       "      <td>The reason behind the insane amount of SOS pos...</td>\n",
+       "      <td>n5zpvj</td>\n",
+       "      <td>1620277632</td>\n",
+       "      <td>t2_6kvf3ch3</td>\n",
+       "      <td>True</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.44</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Since the beginning of time SOS was not allowe...</td>\n",
+       "      <td>https://www.reddit.com/r/wallstreetbets/commen...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2096</th>\n",
+       "      <td>An Interesting Investment 👀 (Human being: Mike...</td>\n",
+       "      <td>n5zp7f</td>\n",
+       "      <td>1620277554</td>\n",
+       "      <td>t2_3b57c7a8</td>\n",
+       "      <td>True</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.14</td>\n",
+       "      <td>0</td>\n",
+       "      <td>\\*Not financial advice\\* Wanted to share this ...</td>\n",
+       "      <td>https://www.reddit.com/r/wallstreetbets/commen...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2342</th>\n",
+       "      <td>What I learned</td>\n",
+       "      <td>n5xg04</td>\n",
+       "      <td>1620269324</td>\n",
+       "      <td>t2_8qea9ma8</td>\n",
+       "      <td>True</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.36</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Let me start with I made money with yall's hel...</td>\n",
+       "      <td>https://www.reddit.com/r/wallstreetbets/commen...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>9406 rows × 10 columns</p>\n",
+       "<p>4992 rows × 10 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
        "                                                  title      id  created_utc  \\\n",
-       "0     Glorious Oracle of Ohama achieves pareto effic...  n6lg1w   1620345568   \n",
-       "1                   FLGT TO THE MOON...1ST QTR #S TODAY  n6lfdp   1620345502   \n",
-       "2                            OCGN Watch for Tomorrow...  n6lfa5   1620345492   \n",
-       "3                                i think this fits here  n6lefj   1620345410   \n",
-       "4                                                 Sad 😔  n6lecl   1620345402   \n",
+       "6003                    $MSFT Infinite Money Glitch 🚀🚀🚀  n4dvka   1620095108   \n",
+       "1854  WSB mods sleeping... AMC &amp; GME to the mooo...  n62fi3   1620289149   \n",
+       "2173                                    BRING GME BACK!  n5z4si   1620275340   \n",
+       "8316  Why I think the market will see a 30-50% corre...  n30u1l   1619937822   \n",
+       "3268                     Mods that are only 2 days old?  n5lvld   1620236701   \n",
        "...                                                 ...     ...          ...   \n",
-       "9401                                       Lollllllllll  n26sjv   1619827492   \n",
-       "9402  Patience is a virtue. Took awhile before Tesla...  n26rtq   1619827429   \n",
-       "9403           First 500 to sign up receive 100k DaBaby  n26r4b   1619827368   \n",
-       "9404  If there is one thing I have learnt on r/wsb, ...  n26qr6   1619827339   \n",
-       "9405  When fighting Marxist censorship makes you a m...  n26q7n   1619827288   \n",
+       "2082  Buy $GOEV join us in bankruptcy or Valhalla. G...  n5ztnt   1620278039   \n",
+       "2084  Robinhood says rocket is down 13% in the prema...  n5zrnx   1620277828   \n",
+       "2093  The reason behind the insane amount of SOS pos...  n5zpvj   1620277632   \n",
+       "2096  An Interesting Investment 👀 (Human being: Mike...  n5zp7f   1620277554   \n",
+       "2342                                     What I learned  n5xg04   1620269324   \n",
        "\n",
        "     author_fullname  is_self  score  upvote_ratio  total_awards_received  \\\n",
-       "0        t2_3qdkzqjm    False      1          0.99                      0   \n",
-       "1        t2_a0mf559i     True      1          1.00                      0   \n",
-       "2        t2_a368t9uc     True      1          1.00                      0   \n",
-       "3        t2_4ac5c7gb    False      3          0.72                      1   \n",
-       "4        t2_5qd02awb    False     36          0.86                      0   \n",
+       "6003     t2_4srimr8j     True  19066          0.89                    195   \n",
+       "1854     t2_a0qxqff0     True   6169          0.93                     45   \n",
+       "2173     t2_4b5sdbo4     True   5817          0.91                     76   \n",
+       "8316       t2_120825     True   4944          0.88                     70   \n",
+       "3268     t2_4495h5sb     True   4100          0.94                     21   \n",
        "...              ...      ...    ...           ...                    ...   \n",
-       "9401     t2_8jwdn4sp    False      1          1.00                      0   \n",
-       "9402     t2_6ny07hwq    False      2          1.00                      0   \n",
-       "9403     t2_a1z5kokh    False      0          0.23                      1   \n",
-       "9404     t2_6b8tzrby     True      1          1.00                      0   \n",
-       "9405     t2_9zm7adcw    False     19          0.83                      0   \n",
+       "2082     t2_a1jt7kff     True      0          0.35                      0   \n",
+       "2084     t2_5qaiaw6y     True      0          0.15                      0   \n",
+       "2093     t2_6kvf3ch3     True      0          0.44                      0   \n",
+       "2096     t2_3b57c7a8     True      0          0.14                      0   \n",
+       "2342     t2_8qea9ma8     True      0          0.36                      0   \n",
        "\n",
-       "                                 selftext  \\\n",
-       "0                                           \n",
-       "1     FLGT TO THE MOON...1ST QTR #S TODAY   \n",
-       "2                               [removed]   \n",
-       "3                                           \n",
-       "4                                           \n",
-       "...                                   ...   \n",
-       "9401                                        \n",
-       "9402                                        \n",
-       "9403                                        \n",
-       "9404                            [removed]   \n",
-       "9405                                        \n",
+       "                                               selftext  \\\n",
+       "6003  Disclaimer: I am not a financial or investment...   \n",
+       "1854                              AMC and GME let's go.   \n",
+       "2173  Enough with the new pump and dump every week, ...   \n",
+       "8316                                          [removed]   \n",
+       "3268  Wow!  They seem to have gotten a lot of experi...   \n",
+       "...                                                 ...   \n",
+       "2082  This is not financial advice. It is possible t...   \n",
+       "2084  Is this accurate?? How does this kind of thing...   \n",
+       "2093  Since the beginning of time SOS was not allowe...   \n",
+       "2096  \\*Not financial advice\\* Wanted to share this ...   \n",
+       "2342  Let me start with I made money with yall's hel...   \n",
        "\n",
        "                                                    url  \n",
-       "0                   https://i.redd.it/mspkkklr9lx61.png  \n",
-       "1     https://www.reddit.com/r/wallstreetbets/commen...  \n",
-       "2     https://www.reddit.com/r/wallstreetbets/commen...  \n",
-       "3           https://www.youtube.com/watch?v=6aZ0JYy2IIc  \n",
-       "4                   https://i.redd.it/ciguyky99lx61.jpg  \n",
+       "6003  https://www.reddit.com/r/wallstreetbets/commen...  \n",
+       "1854  https://www.reddit.com/r/wallstreetbets/commen...  \n",
+       "2173  https://www.reddit.com/r/wallstreetbets/commen...  \n",
+       "8316  https://www.reddit.com/r/wallstreetbets/commen...  \n",
+       "3268  https://www.reddit.com/r/wallstreetbets/commen...  \n",
        "...                                                 ...  \n",
-       "9401                https://i.redd.it/uk59khg9hew61.jpg  \n",
-       "9402                    https://v.redd.it/touz8edygew61  \n",
-       "9403  https://docs.google.com/forms/d/e/1FAIpQLSeKQw...  \n",
-       "9404  https://www.reddit.com/r/wallstreetbets/commen...  \n",
-       "9405                https://i.redd.it/z6bn1yjngew61.jpg  \n",
+       "2082  https://www.reddit.com/r/wallstreetbets/commen...  \n",
+       "2084  https://www.reddit.com/r/wallstreetbets/commen...  \n",
+       "2093  https://www.reddit.com/r/wallstreetbets/commen...  \n",
+       "2096  https://www.reddit.com/r/wallstreetbets/commen...  \n",
+       "2342  https://www.reddit.com/r/wallstreetbets/commen...  \n",
        "\n",
-       "[9406 rows x 10 columns]"
+       "[4992 rows x 10 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "wsb"
+    "wsb_text = wsb[wsb[\"is_self\"] == True]\n",
+    "wsb_text.sort_values(by = \"score\", ascending = False)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
