--- a/RedditData.ipynb
+++ b/RedditData.ipynb
@@ -56,7 +56,9 @@
    "outputs": [],
    "source": [
     "'''\n",
+    "\n",
     "Some helper functions for the reddit API.\n",
+    "\n",
     "'''\n",
     "\n",
     "def extract_num_rewards(awardings_data):\n",
@@ -85,6 +87,7 @@
     "    \n",
     "    content[\"total_awards\"] = extract_num_rewards(content[\"awards\"])\n",
     "    #content[\"downs\"] = (1 - content[\"upvote_ratio\"]) * content[\"ups\"] / content[\"upvote_ratio\"]\n",
+    "    # causes a divide by zero error sometimes, because upvote ratio can be zero...\n",
     "    return content"
    ]
   },
@@ -2644,6 +2647,18 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
