--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -1,6 +1,429 @@
 {
- "cells": [],
- "metadata": {},
+ "cells": [
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd           \n",
+    "import praw                   \n",
+    "import re                     \n",
+    "import datetime as dt\n",
+    "import seaborn as sns\n",
+    "import requests\n",
+    "import json\n",
+    "import sys\n",
+    "import time\n",
+    "\n",
+    "\n",
+    "with open(\"API.env\") as file:\n",
+    "    exec(file.read())\n",
+    "\n",
+    "reddit = praw.Reddit(\n",
+    "  client_id = client_id,\n",
+    "  client_secret = client_secret,\n",
+    "  user_agent = user_agent\n",
+    ")\n",
+    "\n",
+    "\n",
+    "subreddit_df = pd.DataFrame()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_pickle(\"test_df.pkl\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'3.8.8 | packaged by conda-forge | (default, Feb 20 2021, 15:50:08) [MSC v.1916 64 bit (AMD64)]'"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import sys\n",
+    "sys.version"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>title</th>\n",
+       "      <th>self</th>\n",
+       "      <th>author</th>\n",
+       "      <th>name</th>\n",
+       "      <th>id</th>\n",
+       "      <th>upvote_ratio</th>\n",
+       "      <th>ups</th>\n",
+       "      <th>downs</th>\n",
+       "      <th>awarders</th>\n",
+       "      <th>awards</th>\n",
+       "      <th>total_awards</th>\n",
+       "      <th>url</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>The German company M1 Kliniken</td>\n",
+       "      <td>True</td>\n",
+       "      <td>TraditionalSport7679</td>\n",
+       "      <td>t3_ktf9ir</td>\n",
+       "      <td>ktf9ir</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>1</td>\n",
+       "      <td>None</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>0</td>\n",
+       "      <td>https://www.reddit.com/r/wallstreetbets/commen...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1019</th>\n",
+       "      <td>Want to yolo on NIO calls.</td>\n",
+       "      <td>True</td>\n",
+       "      <td>Curiousoutlaw</td>\n",
+       "      <td>t3_kt2ky3</td>\n",
+       "      <td>kt2ky3</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>1</td>\n",
+       "      <td>None</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>0</td>\n",
+       "      <td>https://www.reddit.com/r/wallstreetbets/commen...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1018</th>\n",
+       "      <td>People who lost thousands of dollars during th...</td>\n",
+       "      <td>True</td>\n",
+       "      <td>None</td>\n",
+       "      <td>t3_kt2kym</td>\n",
+       "      <td>kt2kym</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>1</td>\n",
+       "      <td>None</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>0</td>\n",
+       "      <td>https://www.reddit.com/r/wallstreetbets/commen...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1017</th>\n",
+       "      <td>Today's Pre-Market Movers &amp; News [Friday, Janu...</td>\n",
+       "      <td>True</td>\n",
+       "      <td>bigbear0083</td>\n",
+       "      <td>t3_kt2mhk</td>\n",
+       "      <td>kt2mhk</td>\n",
+       "      <td>0.87</td>\n",
+       "      <td>24</td>\n",
+       "      <td>None</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>0</td>\n",
+       "      <td>https://www.reddit.com/r/wallstreetbets/commen...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1016</th>\n",
+       "      <td>Job reports</td>\n",
+       "      <td>True</td>\n",
+       "      <td>SortSweet</td>\n",
+       "      <td>t3_kt2pmh</td>\n",
+       "      <td>kt2pmh</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>1</td>\n",
+       "      <td>None</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>0</td>\n",
+       "      <td>https://www.reddit.com/r/wallstreetbets/commen...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1036</th>\n",
+       "      <td>It's beginning to be hard to argue we aren't i...</td>\n",
+       "      <td>True</td>\n",
+       "      <td>HippetyHoppety1234</td>\n",
+       "      <td>t3_kt26ao</td>\n",
+       "      <td>kt26ao</td>\n",
+       "      <td>0.93</td>\n",
+       "      <td>10185</td>\n",
+       "      <td>None</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>[{'giver_coin_reward': None, 'subreddit_id': N...</td>\n",
+       "      <td>54</td>\n",
+       "      <td>https://www.reddit.com/r/wallstreetbets/commen...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>45</th>\n",
+       "      <td>I can relate just not retarded enough to get c...</td>\n",
+       "      <td>False</td>\n",
+       "      <td>Analfistfromhell</td>\n",
+       "      <td>t3_ktejpt</td>\n",
+       "      <td>ktejpt</td>\n",
+       "      <td>0.91</td>\n",
+       "      <td>20567</td>\n",
+       "      <td>None</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>[{'giver_coin_reward': None, 'subreddit_id': N...</td>\n",
+       "      <td>55</td>\n",
+       "      <td>https://i.redd.it/l2py153tz6a61.jpg</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>481</th>\n",
+       "      <td>I sold half my Tesla shares today. I bought my...</td>\n",
+       "      <td>False</td>\n",
+       "      <td>onemanstrong</td>\n",
+       "      <td>t3_kt8hng</td>\n",
+       "      <td>kt8hng</td>\n",
+       "      <td>0.91</td>\n",
+       "      <td>21030</td>\n",
+       "      <td>None</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>[{'giver_coin_reward': 0, 'subreddit_id': None...</td>\n",
+       "      <td>63</td>\n",
+       "      <td>https://i.redd.it/7kn10sz6j5a61.png</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>267</th>\n",
+       "      <td>You know what capitalism is? Getting fucked!</td>\n",
+       "      <td>False</td>\n",
+       "      <td>bizarroshittymorph</td>\n",
+       "      <td>t3_ktbkbk</td>\n",
+       "      <td>ktbkbk</td>\n",
+       "      <td>0.98</td>\n",
+       "      <td>5484</td>\n",
+       "      <td>None</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>[{'giver_coin_reward': 0, 'subreddit_id': None...</td>\n",
+       "      <td>75</td>\n",
+       "      <td>https://v.redd.it/11473nh696a61</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>874</th>\n",
+       "      <td>Elon to all the TSLA bears today. 1000 eod 🚀</td>\n",
+       "      <td>False</td>\n",
+       "      <td>None</td>\n",
+       "      <td>t3_kt4ghk</td>\n",
+       "      <td>kt4ghk</td>\n",
+       "      <td>0.88</td>\n",
+       "      <td>17172</td>\n",
+       "      <td>None</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>[{'giver_coin_reward': None, 'subreddit_id': N...</td>\n",
+       "      <td>88</td>\n",
+       "      <td>https://v.redd.it/nmc6lxv2l4a61</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1551 rows × 12 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                  title   self  \\\n",
+       "0                        The German company M1 Kliniken   True   \n",
+       "1019                         Want to yolo on NIO calls.   True   \n",
+       "1018  People who lost thousands of dollars during th...   True   \n",
+       "1017  Today's Pre-Market Movers & News [Friday, Janu...   True   \n",
+       "1016                                        Job reports   True   \n",
+       "...                                                 ...    ...   \n",
+       "1036  It's beginning to be hard to argue we aren't i...   True   \n",
+       "45    I can relate just not retarded enough to get c...  False   \n",
+       "481   I sold half my Tesla shares today. I bought my...  False   \n",
+       "267        You know what capitalism is? Getting fucked!  False   \n",
+       "874        Elon to all the TSLA bears today. 1000 eod 🚀  False   \n",
+       "\n",
+       "                    author       name      id  upvote_ratio    ups downs  \\\n",
+       "0     TraditionalSport7679  t3_ktf9ir  ktf9ir          1.00      1  None   \n",
+       "1019         Curiousoutlaw  t3_kt2ky3  kt2ky3          1.00      1  None   \n",
+       "1018                  None  t3_kt2kym  kt2kym          1.00      1  None   \n",
+       "1017           bigbear0083  t3_kt2mhk  kt2mhk          0.87     24  None   \n",
+       "1016             SortSweet  t3_kt2pmh  kt2pmh          1.00      1  None   \n",
+       "...                    ...        ...     ...           ...    ...   ...   \n",
+       "1036    HippetyHoppety1234  t3_kt26ao  kt26ao          0.93  10185  None   \n",
+       "45        Analfistfromhell  t3_ktejpt  ktejpt          0.91  20567  None   \n",
+       "481           onemanstrong  t3_kt8hng  kt8hng          0.91  21030  None   \n",
+       "267     bizarroshittymorph  t3_ktbkbk  ktbkbk          0.98   5484  None   \n",
+       "874                   None  t3_kt4ghk  kt4ghk          0.88  17172  None   \n",
+       "\n",
+       "     awarders                                             awards  \\\n",
+       "0          []                                                 []   \n",
+       "1019       []                                                 []   \n",
+       "1018       []                                                 []   \n",
+       "1017       []                                                 []   \n",
+       "1016       []                                                 []   \n",
+       "...       ...                                                ...   \n",
+       "1036       []  [{'giver_coin_reward': None, 'subreddit_id': N...   \n",
+       "45         []  [{'giver_coin_reward': None, 'subreddit_id': N...   \n",
+       "481        []  [{'giver_coin_reward': 0, 'subreddit_id': None...   \n",
+       "267        []  [{'giver_coin_reward': 0, 'subreddit_id': None...   \n",
+       "874        []  [{'giver_coin_reward': None, 'subreddit_id': N...   \n",
+       "\n",
+       "      total_awards                                                url  \n",
+       "0                0  https://www.reddit.com/r/wallstreetbets/commen...  \n",
+       "1019             0  https://www.reddit.com/r/wallstreetbets/commen...  \n",
+       "1018             0  https://www.reddit.com/r/wallstreetbets/commen...  \n",
+       "1017             0  https://www.reddit.com/r/wallstreetbets/commen...  \n",
+       "1016             0  https://www.reddit.com/r/wallstreetbets/commen...  \n",
+       "...            ...                                                ...  \n",
+       "1036            54  https://www.reddit.com/r/wallstreetbets/commen...  \n",
+       "45              55                https://i.redd.it/l2py153tz6a61.jpg  \n",
+       "481             63                https://i.redd.it/7kn10sz6j5a61.png  \n",
+       "267             75                    https://v.redd.it/11473nh696a61  \n",
+       "874             88                    https://v.redd.it/nmc6lxv2l4a61  \n",
+       "\n",
+       "[1551 rows x 12 columns]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.sort_values(by = \"total_awards\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'DataFrameGroupBy' object has no attribute 'values'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-18-41bc07d67033>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mdf\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m\"author\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m\"ups\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m\"total_awards\"\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mgroupby\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"author\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mvalues\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32m~\\anaconda3\\envs\\Erdos_Institute\\lib\\site-packages\\pandas\\core\\groupby\\groupby.py\u001b[0m in \u001b[0;36m__getattr__\u001b[1;34m(self, attr)\u001b[0m\n\u001b[0;32m    750\u001b[0m             \u001b[1;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mattr\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    751\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 752\u001b[1;33m         raise AttributeError(\n\u001b[0m\u001b[0;32m    753\u001b[0m             \u001b[1;34mf\"'{type(self).__name__}' object has no attribute '{attr}'\"\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    754\u001b[0m         )\n",
+      "\u001b[1;31mAttributeError\u001b[0m: 'DataFrameGroupBy' object has no attribute 'values'"
+     ]
+    }
+   ],
+   "source": [
+    "df[[\"author\", \"ups\", \"total_awards\"]].groupby(\"author\").values()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "title           People who lost thousands of dollars during th...\n",
+       "self                                                         True\n",
+       "author                                                       None\n",
+       "name                                                    t3_kt2kym\n",
+       "id                                                         kt2kym\n",
+       "upvote_ratio                                                  1.0\n",
+       "ups                                                             1\n",
+       "downs                                                        None\n",
+       "awarders                                                       []\n",
+       "awards                                                         []\n",
+       "total_awards                                                    0\n",
+       "url             https://www.reddit.com/r/wallstreetbets/commen...\n",
+       "Name: 1018, dtype: object"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.loc[1018]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.8.8"
+  }
+ },
  "nbformat": 4,
  "nbformat_minor": 4
 }
